--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "antd": "^4.1.4",
+        "@zeit/next-css": "^1.0.1",
+        "antd": "^4.2.0",
         "axios": "^0.19.0",
         "compression": "^1.7.1",
         "express": "^4.16.2",
@@ -12,15 +13,14 @@
         "next-routes": "^1.4.2",
         "prop-types": "^15.6.1",
         "react": "^16.13.1",
+        "react-ckeditor-component": "^1.1.0",
         "react-dom": "^16.13.1",
         "react-helmet": "^5.2.1",
         "react-is": "^16.13.1",
         "react-redux": "^7.0.3",
         "redux": "^4.0.1",
         "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.3.0",
-        "styled-components": "^5.0.0",
-        "styled-normalize": "^8.0.6"
+        "redux-thunk": "^2.3.0"
     },
     "name": "nextjs-redux-starter",
     "version": "1.0.0",
@@ -32,6 +32,7 @@
         "babel-jest": "^25.1.0",
         "babel-plugin-inline-dotenv": "^1.1.2",
         "babel-plugin-module-resolver": "^4.0.0",
+        "babel-plugin-styled-components": "^1.10.7",
         "jest": "^25.1.0",
         "lint-staged": "^10.0.8",
         "nodemon": "^2.0.1",
