--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "dependencies": {
-        "@zeit/next-css": "^1.0.1",
         "antd": "^4.2.0",
         "axios": "^0.19.0",
         "compression": "^1.7.1",
         "express": "^4.16.2",
-        "helmet": "^3.20.0",
+        "helmet": "^3.22.0",
         "humps": "^2.0.1",
         "immutable": "^3.8.2",
         "next": "^9.3.1",
@@ -15,15 +14,16 @@
         "react": "^16.13.1",
         "react-ckeditor-component": "^1.1.0",
         "react-dom": "^16.13.1",
-        "react-helmet": "^5.2.1",
+        "react-helmet": "^6.0.0",
         "react-is": "^16.13.1",
         "react-redux": "^7.0.3",
         "redux": "^4.0.1",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0"
     },
-    "name": "nextjs-redux-starter",
+    "name": "next-com",
     "version": "1.0.0",
+    "license": "MIT",
     "main": "server/index.js",
     "devDependencies": {
         "@babel/core": "^7.1.0",
