--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^19.0.0",
+        "@ckeditor/ckeditor5-react": "^2.1.0",
         "antd": "^4.2.0",
         "axios": "^0.19.0",
         "compression": "^1.7.1",
@@ -12,7 +14,6 @@
         "next-routes": "^1.4.2",
         "prop-types": "^15.6.1",
         "react": "^16.13.1",
-        "react-ckeditor-component": "^1.1.0",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.0.0",
         "react-is": "^16.13.1",
